# arbitrage

./: .gitignore  AGENTS.md  Dockerfile  README.md  buildspec.yml  pyproject.toml
docker/: entrypoint.sh
docs/: CONTAINERIZATION.md  DASHBOARD_BOT_GUIDE.md  KNOWN_LIMITATIONS.md  PRD.md  TDD.md  WEBSOCKET_LLM_GUIDE.md
scripts/: build_images.sh
src/arbitrage/: __init__.py
src/arbitrage/backtest/: __init__.py  engine.py  simulator.py
src/arbitrage/config/: __init__.py  secrets.py  settings.py
src/arbitrage/dashboard/: __init__.py  api.py  main.py
src/arbitrage/database/: __init__.py  models.py  queries.py  session.py
src/arbitrage/discord_bot/: __init__.py  bot.py
src/arbitrage/domain/: __init__.py  markets.py  orders.py
src/arbitrage/events/: models.py
src/arbitrage/execution/: kalshi_executor.py  polymarket_executor.py  state_machine.py
src/arbitrage/ingest/: __init__.py  base.py  kalshi.py  kalshi_ws.py  polymarket.py  polymarket_ws.py
src/arbitrage/logging/: __init__.py  setup.py
src/arbitrage/markets/: pairs.py
src/arbitrage/matching/: __init__.py  candidate.py  llm_client.py  service.py  validators.py
src/arbitrage/observability/: logging.py
src/arbitrage/risk/: manager.py
src/arbitrage/services/: __init__.py  base.py
src/arbitrage/services/api/: __init__.py  app.py
src/arbitrage/services/execution/: __init__.py  app.py
src/arbitrage/services/ingest/: __init__.py  app.py
src/arbitrage/services/matcher/: __init__.py  app.py
src/arbitrage/services/signals/: __init__.py  app.py
src/arbitrage/signals/: __init__.py  depth.py  friction.py  leadlag.py  service.py
tests/: conftest.py  test_dashboard.py  test_discord_bot.py  test_health_endpoints.py
tests/database/: test_models.py
tests/ingest/: __init__.py  test_adapters.py
tests/matching/: __init__.py  test_llm_client.py
