[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage-platform"
version = "0.1.0"
description = "Core scaffolding for the V0 arbitrage trading platform."
authors = [{name = "Arbitrage Engineering"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.5",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "mypy>=1.8"]

[tool.setuptools.packages.find]
where = ["src"]
