[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage-platform"
version = "0.1.0"
description = "Cross-venue binary options arbitrage platform"
authors = [{name = "Arbitrage Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.5",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.25",
    "structlog>=23.2",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8"
]

[tool.setuptools.packages.find]
where = ["src"]
