[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage-platform"
version = "0.1.0"
description = "Cross-venue binary options arbitrage platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Arbitrage Team" }
]
license = { text = "Proprietary" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License"
]
keywords = ["arbitrage", "trading", "polymarket", "kalshi"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.25",
    "structlog>=23.2",
    "python-dotenv>=1.0",
    "boto3>=1.34",
    "eth-account>=0.9",
    "numpy>=1.26",
    "pandas>=2.1",
    "alembic>=1.13",
    "tenacity>=8.2",
    "orjson>=3.9",
    "websockets>=12.0",
    "tiktoken>=0.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "aiosqlite>=0.19"
]
bot = [
    "discord.py>=2.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = false
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
